Options page: Fix the bottom gap on Firefox, such that the background color spans through the entire height

--- a/src/popup/styles/_main.scss
+++ b/src/popup/styles/_main.scss
@@ -35,6 +35,8 @@ body {
 }
 
 .options-page {
+  margin-bottom: 20px; // For Firefox
+
   .control-section:first-child {
     margin-top: 0;
   }
